refactor : RoomService를 service 패키지 아래로 이동